@@ -2112,15 +2112,18 @@ instance Monoid ExecFlags where
 -- ------------------------------------------------------------
 
 data UserConfigFlags = UserConfigFlags {
-  userConfigVerbosity :: Flag Verbosity
+  userConfigVerbosity :: Flag Verbosity,
+  userConfigForce     :: Flag Bool
 }
 
 instance Monoid UserConfigFlags where
   mempty = UserConfigFlags {
-    userConfigVerbosity = toFlag normal
+    userConfigVerbosity = toFlag normal,
+    userConfigForce     = toFlag False
     }
   mappend a b = UserConfigFlags {
-    userConfigVerbosity = combine userConfigVerbosity
+    userConfigVerbosity = combine userConfigVerbosity,
+    userConfigForce     = combine userConfigForce
     }
     where combine field = field a `mappend` field b
 
@@ -2135,6 +2138,9 @@ userConfigCommand = CommandUI {
     ++ " (i.e. all bindings that are actually defined and not commented out)"
     ++ " and the default config of the new version.\n"
     ++ "\n"
+    ++ "init: Creates a new config file at either ~/.cabal/config or as"
+    ++ " specified by --config-file, if given. An existing file won't be "
+    ++ " overwritten unless -f or --force is given.\n"
     ++ "diff: Shows a pseudo-diff of the user's ~/.cabal/config file and"
     ++ " the default configuration that would be created by cabal if the"
     ++ " config file did not exist.\n"
@@ -2142,10 +2148,14 @@ userConfigCommand = CommandUI {
     ++ " created by default, and write the result back to ~/.cabal/config.",
 
   commandNotes        = Nothing,
-  commandUsage        = usageAlternatives "user-config" ["diff", "update"],
+  commandUsage        = usageAlternatives "user-config" ["init", "diff", "update"],
   commandDefaultFlags = mempty,
   commandOptions      = \ _ -> [
    optionVerbosity userConfigVerbosity (\v flags -> flags { userConfigVerbosity = v })
+ , option ['f'] ["force"]
+     "Overwrite the config file if it already exists."
+     userConfigForce (\v flags -> flags { userConfigForce = v })
+     trueArg
    ]
   }
 
