@@ -1,0 +1,2 @@
+Writing default configuration to ./cabal-config
+Writing default configuration to ./cabal-config
