@@ -1,0 +1,1 @@
+Writing default configuration to ./cabal-config
