@@ -9,7 +9,8 @@ import Data.List (sort, nub)
 #if !MIN_VERSION_base(4,8,0)
 import Data.Monoid
 #endif
-import System.Directory (getCurrentDirectory)
+import System.Directory (doesFileExist,
+                         getCurrentDirectory, getTemporaryDirectory)
 import System.FilePath ((</>))
 
 import Test.Tasty
@@ -20,6 +21,7 @@ import Distribution.Utils.NubList (fromNubList)
 import Distribution.Client.Setup (GlobalFlags (..), InstallFlags (..))
 import Distribution.Client.Utils (removeExistingFile)
 import Distribution.Simple.Setup (Flag (..), ConfigFlags (..), fromFlag)
+import Distribution.Simple.Utils (withTempDirectory)
 import Distribution.Verbosity (silent)
 
 tests :: [TestTree]
@@ -27,6 +29,7 @@ tests = [ testCase "nullDiffOnCreate" nullDiffOnCreateTest
         , testCase "canDetectDifference" canDetectDifference
         , testCase "canUpdateConfig" canUpdateConfig
         , testCase "doubleUpdateConfig" doubleUpdateConfig
+        , testCase "newDefaultConfig" newDefaultConfig
         ]
 
 nullDiffOnCreateTest :: Assertion
@@ -75,6 +78,16 @@ doubleUpdateConfig = bracketTest $ \configFile -> do
         listUnique (map show . fromNubList . configProgramPathExtra $ savedConfigureFlags updated)
     assertBool ("Field 'build-summary' doesn't contain duplicates") $
         listUnique (map show . fromNubList . installSummaryFile $ savedInstallFlags updated)
+
+
+newDefaultConfig :: Assertion
+newDefaultConfig = do
+    sysTmpDir <- getTemporaryDirectory
+    withTempDirectory silent sysTmpDir "cabal-test" $ \tmpDir -> do
+        let configFile  = tmpDir </> "tmp.config"
+        createDefaultConfigFile silent configFile
+        exists <- doesFileExist configFile
+        assertBool ("Config file should be written to " ++ configFile) exists
 
 
 globalFlags :: FilePath -> GlobalFlags
