@@ -37,6 +37,9 @@
 	* Support for secure repos using hackage-security (#2983).
 	* Added a log file message similar to one printed by 'make' when
 	building in another directory (#2642).
+	* Added new subcommand 'init' to 'cabal user-config'. This
+	subcommand creates a cabal configuration file in either the
+	default location or as specified by --config-file (#2553).
 
 1.22.0.0 Johan Tibell <johan.tibell@gmail.com> January 2015
 	* New command: user-config (#2159).
